# AI-Content-Automation

./: .gitignore  README.md  main.py  pipeline.py  pyproject.toml  requirements.txt
config/: settings.py
modules/: idea_generator.py  script_writer.py  thumbnail_maker.py  uploader.py  video_builder.py  voice_generator.py
