[project]
name = "ai-content-creation-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=7.2.8",
    "google-api-python-client>=2.197.0",
    "google-auth-oauthlib>=1.4.0",
    "groq>=1.4.0",
    "moviepy>=2.2.1",
    "pillow>=11.3.0",
    "python-dotenv>=1.2.1",
    "requests>=2.33.1",
]
